# mtrack

./: Cargo.toml
src/: controller.rs  main.rs  player.rs  playlist.rs  songs.rs
src/audio/: cpal.rs
src/config/: controller.rs
src/controller/: keyboard.rs  midi.rs  restapi.rs
src/controller/restapi/: ui.rs
ui/: index.html  script.js  styles.css
