[package]
name = "mtrack"
description = "A multitrack audio and MIDI player for live performances."
license = "GPL-3.0"
version = "0.1.3"
authors = ["Michael Wilson <mike@mdwn.dev>"]
edition = "2021"
repository = "https://github.com/mdwn/mtrack"
readme = "README.md"
keywords = ["audio"]
categories = ["multimedia", "multimedia::audio"]
exclude = [
    ".github/*",
    ".gitignore",
    ".licensure.yml",
    "CODE_OF_CONDUCT.md",
    "assets/*",
    "examples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.0", features = ["derive"] }
cpal = { version = "0.15.3", features = ["jack"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
hound = "3.5.1"
include_dir = "0.7.4"
lazy_static = "1.4.0"
libc = "0.2.153"
midir = "0.9.1"
midly = "0.5.3"
mime_guess = "2.0.5"
nodi = { version = "1.0.0", features = ["hybrid-sleep", "midir"] }
regex = "1.10.3"
ringbuf = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9"
shh = "1.0.1"
termion = "3.0.0"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.10.1"
